# annotation-gpt

./: .gitignore  Makefile  pyproject.toml  requirements-test.txt  requirements.txt
annotation_gpt/: config.py
annotation_gpt/annotation/summarization/: openai.py
annotation_gpt/schema/openai/: result.py
tests/annotation/summarization/: test_openai.py
